# pyFuckery

./: .bumpversion.cfg  .cookiecutterrc  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  MANIFEST.in  README.rst  appveyor.yml  circle.yml  codecov.yaml  pyproject.toml  setup.cfg  setup.py  testrunner.sh  tox.ini
.circleci/: config.yml
ci/: appveyor-download.py
ci/templates/: .travis.yml
docs/: conf.py  installation.rst  usage.rst
docs/reference/: fuckery.cli.rst  fuckery.constants.rst  fuckery.exc.rst  fuckery.memory.rst  fuckery.parser.rst  fuckery.rst  fuckery.vm.rst  index.rst  modules.rst  pyfuckery.rst
src/fuckery/: __init__.py  __main__.py  cli.py  constants.py  exc.py  memory.py  parser.py  vm.py
src/pyfuckery/: __main__.py  cli.py  constants.py  exc.py  memory.py  parser.py  vm.py
tests/: common.py  test_memory..py  test_memory.py  test_parser.py  test_pyfuckery.py  test_vm.py
tests/assets/: add.bf  hello_world.bf  real_adder.bf  rot13.bf
